--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "themes/ananke"]
 	path = themes/ananke
 	url = https://github.com/theNewDynamic/gohugo-theme-ananke
+[submodule "themes/hugo-casper3"]
+	path = themes/hugo-casper3
+	url = git@github.com:jonathanjanssens/hugo-casper3.git
