--- a/.markdownlint.yaml
+++ b/.markdownlint.yaml
@@ -1,8 +1,11 @@
 default: true
 MD002:
   level: 2
+MD004:
+  style: dash
 MD007:
   indent: 2
 MD013: false
+MD024: false
 MD033: false
 MD041: false
